--- a/wireframe3-4/wireframe 3-4.css
+++ b/wireframe3-4/wireframe 3-4.css
@@ -6,12 +6,18 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
+}
+
+.voltar {
+  background-color: #ccc;
+  margin-right: 16px;
 }
 
 .paiTodos {
@@ -31,6 +37,24 @@ html, body {
   background: linear-gradient(to bottom, rgba(85, 82, 82, 0.194), #fff);
   padding: 10px 40px;
   flex-wrap: wrap;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+}
+
+.profile img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  /* Foto redonda */
+  object-fit: cover;
+}
+
+.profile-name {
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .logo {
